# NewFrontiersXInfinity

./: specsheet
app/: compile.sh  main.c  out
game/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  game  main.cpp
game/.cmake/api/v1/reply/: cache-v2-5d9008b18c7d79d5ef1c.json  cmakeFiles-v1-efd493b581b801827eb6.json  codemodel-v2-c224043cb8dae3ce4d9a.json  index-2026-05-29T11-56-58-0246.json  target-game-Debug-3f7fed37c6577a1380bf.json
game/display/: Display.cpp  Display.h
game/engine/: GameContext.cpp  GameContext.h  Grid.cpp  Grid.h  Layer.cpp  Layer.h  Level.cpp  Level.h  Tile.cpp  Tile.h  Tileset.cpp  Tileset.h
game/engine/io/: BitmapLoader.cpp  BitmapLoader.h  LevelLoader.cpp  LevelLoader.h
game/engine/io/objects/: Layer.cpp  Level.h  Tile.cpp  Tile.h  Tileset.cpp  Tileset.h
game/engine/memory/: MemoryManager.cpp  MemoryManager.h
game/engine/primitives/: NFX_Bitmap.cpp  NFX_Bitmap.h
game/engine/screen/: Window.cpp  Window.h
game/levels/native/: level1.json
game/levels/tiled/: test.tmj  test.tmx  tiled_snatcher_level1.tiled-session
game/menu/: BottomMenu.cpp  BottomMenu.h  MenuBox.cpp  MenuBox.h
game/tooling/tiledConverter/: main.py
game_tilesets/: simple_tiles.aseprite  snatcher_tiles.aseprite
lore/: Concept.odt
spaceships/: frigate-mercury-class.aseprite  frigate-side.aseprite  frigate-top.aseprite  frigate.aseprite
spaceships/mercury/: frigate-mercury-class.aseprite  mercury-specs.txt
